Update gateway after service already started (#86)
