# rpc/api/api.swagger.json
@@ -82,6 +82,32 @@
           "Poet"
         ]
       }
+    },
+    "/v1/updategateway": {
+      "post": {
+        "operationId": "UpdateGateway",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiUpdateGatewayResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiUpdateGatewayRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Poet"
+        ]
+      }
     }
   },
   "definitions": {
@@ -145,6 +171,32 @@
           "type": "string"
         }
       }
+    },
+    "apiUpdateGatewayRequest": {
+      "type": "object",
+      "properties": {
+        "gatewayAddresses": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "disableBroadcast": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "connAcksThreshold": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "broadcastAcksThreshold": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "apiUpdateGatewayResponse": {
+      "type": "object"
     }
   }
 }
